2008-10-26  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h,ptp.c: Started adding PTP v1.1 defines.

2008-10-12  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Adjusted summary output a bit.

	* library.c: Handle "wrong parent" or "no root parent"
	  devices every time, so when we autodetect new ones
	  we do not need to add them to the list.
	  Should avoid releasing libgphoto2 for new iPhones etc.

	* library.c: If a filename is empty or not set, replace it by
	  the 8 char hexcode. (Should enable movie retrieval on
	  Panasonics).

2008-10-09  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c: factored out ptp time string parser
	* library.c: also support MTP commands for cameras.
	  (fast directory download)
	  Using it for the Canon Digital IXUS SX100IS already.

2008-09-20  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Do not disable viewfinder just after one preview.
	  Repeatedly switching on/off viewfinder mode causes refocus
	  all the time.

2008-08-28  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Increase timeout for mtp proplist reading (from
	  Chris Bagwell).

	* ptp.c, music-players.h, device-flags.h: Merged updates from libmtp.

2008-07-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon Coolpix L16 , Nikon D700.

	* ptp-unpack.c: Fixed a property handling issue
	  with empty/non existant strings in the unpacker,
	  triggered by the D700.

	* README.ptp2: Added link to now official MTP 1.0 spec.

2008-07-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added the Canon EOS 1D Mark III (reported by jholt)

	* library.c: Disabled more 0x2372 panasonic mass storage ids.

2008-07-03  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: allow capture=off

2008-06-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Change initial timeout magic 
	  for Canon cameras to use 0.5 second timeouts.

	  Lets hope all the Canons can do this.
